# openprot

./: .bazelrc  .clang-format  .gitignore  .semgrepignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  SECURITY.md  deny.toml  pw  rust-toolchain.toml  workflows.json
.cargo/: config.toml
.claude/: mctp-test-plan.md
.github/: dependabot.yml
.github/actions/setup-bazel-self-hosted/: action.yml
.github/workflows/: ci.yml  docs.yml  github_pages.yml  nightly.yml  release.yml  roll-pigweed.yml  sync-main-to-earlgrey-hwe.yml
apps/i2c-slave-echo/src/: main.rs
apps/spdm-responder/: BUILD.bazel
apps/spdm-responder/src/: main.rs
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  coding-style.md  contributing.md
docs/src/design/: README.md  rust-trait-to-idl-conversion.md
docs/src/design/i2c/: subsystem.md
docs/src/design/i2c/images/: architecture_layers.mmd  component_communication.mmd  master_syscall_flow.mmd  mctp_packet_structure.mmd  mctp_protocol_stack.mmd  mctp_topology.mmd  multi_task_deployment.mmd  multiple_controllers_routing.mmd  slave_buffer_flow.mmd  slave_notification_flow.mmd  slave_receive_process.mmd  spdm_authentication_flow.mmd
docs/src/design/i2c/sections/: # pw_kernel Definitions and Acronyms.md  api.md  appendix.md  appendix_caliptra_comparison.md  appendix_pw_kernel_reference.md  appendix_raise_peer_proto.md  appendix_raise_peer_proto_safety_review.md  architecture.md  error_handling.md  hardware.md  integration.md  integration_ast1060.md  mctp.md  new-version.md  os_abstraction.md  os_dependencies.md  overview.md  portability.md  porting_pw_kernel.md  reference.md  slave_mode.md  testing.md  troubleshooting.md
docs/src/specification/: threat_model.md
docs/theme/: custom.css
drivers/flash/: BUILD.bazel  spi_flash.rs
drivers/flash/api/: BUILD.bazel  README.md
drivers/flash/api/src/: backend.rs  protocol.rs
drivers/flash/client/: README.md
drivers/flash/client/src/: lib.rs
drivers/mock/: BUILD.bazel  spi_device_fake.rs
drivers/usart/: README.md
drivers/usart/api/: ASYNC_NONBLOCKING_IMPLEMENTATION_PLAN.md  BUILD.bazel  ENHANCEMENT_DESIGN.md
drivers/usart/api/src/: backend.rs
drivers/usart/client/: BUILD.bazel
drivers/usart/server/: BUILD.bazel
drivers/usart/server/src/: lib.rs  main.rs  runtime.rs
hal/async/: BUILD.bazel  Cargo.toml
hal/async/src/: lib.rs
hal/blocking/: BUILD.bazel  Cargo.toml
hal/blocking/flash/: BUILD.bazel  README.md  driver.rs  flash.rs
hal/blocking/src/: cipher.rs  digest.rs  ecdsa.rs  gpio_port.rs  i2c_device.rs  i2c_hardware.rs  key_vault.rs  lib.rs  mac.rs  system_control.rs
hal/blocking/usb/: BUILD.bazel  descriptor.rs  driver.rs  lib.rs
hal/nb/: BUILD.bazel  Cargo.toml
hal/nb/src/: i2c_hardware.rs  lib.rs
openprot/: BUILD.bazel  Cargo.toml  README.md
openprot/src/: lib.rs  main.rs
platform/impls/baremetal/mctp/: Cargo.toml
platform/impls/baremetal/mock/: BUILD.bazel  Cargo.toml
platform/impls/hubris/: BUILD.bazel  Cargo.toml
platform/impls/hubris/src/: lib.rs
platform/impls/linux/: BUILD.bazel  Cargo.toml
platform/impls/linux/src/: lib.rs
platform/impls/rustcrypto/: BUILD.bazel  Cargo.toml
platform/impls/rustcrypto/src/: cipher.rs  controller.rs  lib.rs
platform/impls/tock/: BUILD.bazel  Cargo.toml
platform/impls/tock/src/: lib.rs
platform/traits/hubris/: BUILD.bazel  Cargo.toml
platform/traits/hubris/src/: lib.rs
presubmit/: BUILD.bazel  cpp_include_guard.py  license.py  presubmit.py
protocol/usb/cdc_acm/: BUILD.bazel  lib.rs
protocol/usb/dfu/: BUILD.bazel  README.md  SPEC.md  lib.rs
protocol/usb/stack/: BUILD.bazel  lib.rs
services/crypto/: crypto_exploration.md
services/flash/: BUILD.bazel  README.md  client.rs  opcode.rs  server.rs
services/fwmanager/api/: BUILD.bazel
services/fwmanager/api/src/: boot_control.rs  boot_monitor.rs  config.rs  lib.rs
services/fwmanager/hal-adapters/: BUILD.bazel
services/fwmanager/hal-adapters/src/: gpio_boot_monitor.rs  hal_boot_control.rs  lib.rs
services/i2c/api/src/: target.rs
services/i2c/backend-aspeed/src/: lib.rs
services/i2c/docs/: irq-notification-path-review.md
services/i2c/mctp-transport/: BUILD.bazel
services/i2c/mctp-transport/src/: lib.rs
services/i2c/server/src/: main.rs
services/mctp/api/: Cargo.toml  STACK-DESIGN.md
services/mctp/api/src/: lib.rs  stack.rs
services/mctp/client/: Cargo.toml
services/mctp/server/: BUILD.bazel  Cargo.toml
services/mctp/transport-loopback/: BUILD.bazel  Cargo.toml  README.md
services/mctp/transport-serial/: BUILD.bazel  Cargo.toml  USART_USERSPACE_API_GAPS.md  USART_USERSPACE_HAL_FACADE_DESIGN.md
services/orchestrator/: README.md
services/orchestrator/api/: BUILD.bazel
services/orchestrator/ipc/: BUILD.bazel
services/orchestrator/server/: BUILD.bazel
services/orchestrator/sm/: BUILD.bazel
services/pldm/: BUILD.bazel
services/pldm/firmware-device-ipc/: BUILD.bazel
services/pldm/src/: error.rs  firmware_device.rs  lib.rs  requester.rs  responder.rs  transport.rs
services/pldm/tests/: base_host.rs  firmware_update_host.rs
services/spdm/transport-mctp/: BUILD.bazel  Cargo.toml
services/storage/: BUILD.bazel  Cargo.toml
services/storage/src/: lib.rs
services/telemetry/: BUILD.bazel  Cargo.toml
services/telemetry/src/: lib.rs
util/console/: BUILD.bazel  README.md  dbg_print.c  hexdump.rs  lib.rs  pigweed.rs  pigweed_arm.rs  pigweed_other.rs  stdout.rs
util/error/: BUILD.bazel  README.md  lib.rs  spi.rs
util/io/: BUILD.bazel  io.rs
util/ipc/: BUILD.bazel  host.rs  lib.rs  target.rs
util/ipc_event_queue/: BUILD.bazel
util/ipc_event_queue/src/: lib.rs
util/misc/: BUILD.bazel  hexdump.rs  hexstr.rs  lib.rs
util/panic/: BUILD.bazel  panic.rs
util/regcpy/: BUILD.bazel  regcpy.rs
util/ringbuffer/: BUILD.bazel  lib.rs
util/sfdp/: BUILD.bazel  mod.rs
util/types/: lib.rs  time.rs
util/zfmt/: BUILD.bazel  README.md  buffer.rs  clock.rs  lib.rs  messages.rs  render.rs  server.rs
xtask/: Cargo.toml
xtask/src/: cargo_lock.rs  docs.rs  header.rs  main.rs  precheckin.rs
(+28 files in other folders)
