# Licensed under the Apache-2.0 license

[workspace]
members = [
    "openprot",
    "xtask",
    "hal/blocking",
    "hal/async", 
    "hal/nb",
    "platform/traits",
    "platform/impls/baremetal/mock",
    "platform/impls/linux",
    "platform/impls/tock",
    "platform/impls/hubris",
    "services/telemetry",
    "services/storage",
    "platform/impls/baremetal/mctp",
]
resolver = "2"

[workspace.dependencies]
zerocopy = { version = "0.8.25", features = ["derive"] }
