# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "openprot",
    "xtask",
    "hal/blocking",
    "hal/async", 
    "hal/nb",
    "platform/traits/hubris",
    "platform/impls/baremetal/mock",
    "platform/impls/linux",
    "platform/impls/tock",
    "platform/impls/hubris",
    "platform/impls/rustcrypto",
    "services/telemetry",
    "services/storage",
]
exclude = [
    "third_party/crates_io"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/rusty1968/openprot"
edition = "2021"

[workspace.dependencies]
zerocopy = { version = "0.8", features = ["derive"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
subtle = { version = "2", default-features = false }
# Pin to match Hubris ecosystem
rand_core = { version = "0.10", default-features = false }
embedded-hal = "1.0"
heapless = { version = "0.9", default-features = false }
