# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openprot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openprot"
path = "src/main.rs"

[lib]
name = "openprot"
path = "src/lib.rs"

[dependencies]
