# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "async",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    crate_name = "openprot_hal_async",
    edition = "2024",
    deps = [
        "@rust_crates//:embedded-hal-async",
    ],
)

rust_doc(
    name = "async_doc",
    crate = ":async",
)
