# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "storage",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    edition = "2024",
    deps = [
    ],
)

rust_doc(
    name = "storage_doc",
    crate = ":storage",
)
