# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "panic",
    srcs = [
        "panic.rs",
    ],
    crate_name = "util_panic",
    edition = "2024",
    visibility = ["//visibility:public"],
)
