# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "ringbuffer",
    srcs = [
        "lib.rs",
    ],
    crate_name = "util_ringbuffer",
    edition = "2024",
    deps = [
    ],
)

rust_test(
    name = "ringbuffer_test",
    crate = ":ringbuffer",
)

rust_doc(
    name = "ringbuffer_doc",
    crate = ":ringbuffer",
)
