# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openprot-platform-impl-hubris"
version = "0.1.0"
edition = "2021"
description = "Hubris OS platform implementation for OpenPRoT"
license = "Apache-2.0"

[dependencies]
openprot-platform-traits-hubris = { path = "../../traits/hubris" }
