# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "linux",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    crate_name = "openprot_platform_linux",
    edition = "2024",
    deps = [
    ],
)

rust_doc(
    name = "linux_doc",
    crate = ":linux",
)
