# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openprot-platform-traits-hubris"
version = "0.1.0"
edition = "2021"
description = "Platform integration traits for OpenPRoT on Hubris"
license = "Apache-2.0"

[dependencies]
openprot-hal-async = { path = "../../../hal/async" }
openprot-hal-blocking = { path = "../../../hal/blocking" }
openprot-hal-nb = { path = "../../../hal/nb" }
